# CustomModules

./: .gitignore  .lintr  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: checkqc_lint.yml  checkqc_test.yml  dims_lint.yml  dims_test.yml  gendercheck_lint.yml  gendercheck_test.yml  kinship_lint.yml  kinship_test.yml  moisaichunter_lint.yml  moisaichunter_test.yml  pytest.yml  utils_lint.yml  utils_test.yml
BAF/: IGV.nf
CheckFingerprintVCF/: CheckFingerprintVCF.nf  check_fingerprint_vcf.py
CheckQC/: CheckQC.nf  Dockerfile  check_qc.py  checkqc_giabeval_settings.yaml  pyproject.toml  requirements.txt  test_check_qc.py
CheckQC/test_check_qc/: 240101_fake_check.txt  240101_v2_fake_check.txt  240102_fake_check.txt  sample1_fake_check.txt  sample2_fake_check.txt  settings_single_metric.yaml  settings_two_metrics.yaml
ClarityEpp/: SampleGender.nf  SampleIndications.nf  SampleUDF.nf  SampleUDFDx.nf
DIMS/: AssignToBins.R  AssignToBins.nf  AssignToBinsStitching.R  AssignToBinsStitching.nf  AveragePeaks.R  AveragePeaks.nf  AverageTechReplicates.R  AverageTechReplicates.nf  CheckQC.R  CheckQC.nf  CollectAveraged.R  CollectAveraged.nf  CollectFilled.R  CollectFilled.nf  CollectSumAdducts.R  CollectSumAdducts.nf  EvaluateTics.R  EvaluateTics.nf  FillMissing.R  FillMissing.nf  GenerateBreaks.R  GenerateBreaks.nf  GenerateBreaksStitching.R  GenerateBreaksStitching.nf  GenerateExcel.R  GenerateExcel.nf  GenerateQC.R  GenerateQC.nf  GenerateQCOutput.R  GenerateQCOutput.nf  GenerateViolinPlots.R  GenerateViolinPlots.nf  HMDBparts.R  HMDBparts.nf  HMDBparts_main.R  HMDBparts_main.nf  HMDBparts_old.R  MakeInit.R  MakeInit.nf  ParseSamplesheet.R  (+20 more)
DIMS/AddOnFunctions/: add_lab_id_and_onderzoeksnummer.R  create_violin_plots.R  findPeaks.Gauss.HPC.R  get_patient_data_to_helix.R  output_helix.R  removeFromRepl.pat.R  replaceZeros.R
DIMS/Utils/: RawFiles.nf  add_lab_id_and_onderzoeksnummer.R  annotate_peak_groups.R  atomic_info.R  calculate_zscores.R  check_overlap.R  check_same_samplename.R  create_violin_plots.R  do_peakfinding.R  estimate_area.R  find_peak_groups.R  fit_gaussian.R  fit_gaussians.R  fit_init.R  fit_optim.R  fit_peaks.R  get_element_info.R  get_fit_quality.R  get_fwhm.R  get_patient_data_to_helix.R  get_stdev.R  identify_noisepeaks.R  is_diagnostic_patient.R  merge_duplicate_rows.R  optimize_gaussfit.R  output_helix.R  prepare_alarmvalues.R  prepare_data.R  prepare_data_perpage.R  prepare_toplist.R  replace_zeros.R  search_mzrange.R  sum_adducts.R  sum_curves.R  sum_intensities_adducts.R  within_ppm.R
DIMS/export/: check_qc_functions.R  generate_excel_functions.R  generate_qc_functions.R  generate_qc_output_functions.R  generate_violin_plots_functions.R
DIMS/preprocessing/: average_peaks_functions.R  collect_filled_functions.R  collect_sum_adducts_functions.R  evaluate_tics_functions.R  fill_missing_functions.R  generate_breaks_functions.R  parse_samplesheet_functions.R  peak_finding_functions.R  peak_grouping_functions.R  sum_intensities_adducts.R
DIMS/tests/: testthat.R
DIMS/tests/testthat/: parse_samplesheet_functions.R  test_average_peaks.R  test_check_qc.R  test_collect_filled.R  test_collect_sum_adducts.R  test_evaluate_tics.R  test_fill_missing.R  test_generate_breaks.R  test_generate_excel.R  test_generate_qc_output.R  test_generate_violin_plots.R  test_peak_finding_functions.R  test_peak_grouping.R  test_sum_adducts.R  test_sum_intensities_adducts.R
ExomeDepth/: CallCNV.nf  GetRefset.nf  IGV.nf  Summary.nf
ExonCov/: ImportBam.nf  SampleQC.nf
FranklinVCF/: AddFilterToInfoField.nf  FranklinVCF.nf  franklin_vcf.py  franklinvcf.py
GenderCheck/: ClarityGender.nf  CompareGender.nf  Dockerfile  calculate_gender.py  pyproject.toml  requirements.txt  test_calculate_gender.py  test_gendercheck.py
Kinship/: Dockerfile  Kinship.nf  check_kinship.py  pyproject.toml  requirements.txt  test_check_kinship.py
Kinship/test_check_kinship/: missing_field.ped  multi_family.ped  multi_siblings.ped  single_row.kinship  single_row_duplo.kinship  single_row_kin.kinship  trio.kinship  wrong_separator.ped
MipsTrimDedup/: MipsTrimDedup.nf
MosaicHunter/1.0.0/: Dockerfile  MosaicHunter.nf  get_gender_from_bam_chrx.py  mosaichunter.nf  pyproject.toml  requirements.txt  test_get_gender_from_bam_chrx.py
MosaicHunter/1.0.0/test_get_gender_from_bam_chrx/: test_bam.bam.bai
TrendAnalysis/: TrendAnalysis.nf
UPD/: IGV.nf
Utils/: CreateHSmetricsSummary.nf  EditSummaryFileHappy.nf  GetStatsFromFlagstat.nf  Kinship.nf  ParseChildFromFullTrio.nf  ParseDownsampleFraction.nf  Parse_downsample_fraction.nf  SavePedFile.nf  VersionLog.nf  create_hsmetrics_summary.py  get_gender.py  get_stats_from_flagstat.py  non_empty_existing_path.py  parse_child_from_fulltrio.py  pyproject.toml  test_get_gender.py  test_non_empty_existing_path.py  test_parse_child_from_fulltrio.py
Utils/data/: multi_unrelated_samples.ped  single_family.ped  test_bam.bam
VCF2GLIMS/: Dockerfile  README.md  VCF2GLIMS.nf  requirements.txt  vcf2glims.py
requirements/: dev.txt  prod.txt  testing.txt
(+38 files in other folders)
