[tool.poetry]
name = "checkqc"
version = "0.1.0"
description = "Check and judge qc metrics (files)"
authors = ["Your Name <you@example.com>"]
license = 'MIT'
package-mode = false

[tool.poetry.dependencies]
python = "^3.11.4"
pandas = "2.1.4"
pyyaml = "6.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "3.0.0"
pytest-datadir = "1.5.0"
pytest-datafiles = "2.0"
pytest-dataset = "0.3.2"
pytest-flake8 = "1.0.7"
pytest-mock = "3.8.2"
pytest-raises = "0.11"
pytest-reqs = "0.2.1"
pytest-unordered = "0.5.2"

[tool.ruff]
line-length = 127
indent-width = 4

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
