[tool.poetry]
name = "gendercheck"
version = "0.1.0"
description = ""
authors = ["Bioinformatica Genetica <bioinformatica-genetica@umcutrecht.nl>"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
iniconfig = "2.0.0"
packaging = "23.2"
pluggy = "^1.5.0"
pysam = "0.22.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-datadir = "^1.5.0"

[tool.ruff]
line-length = 127
indent-width = 4

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
