[tool.poetry]
name = "kinship"
version = "1.1.1"
description = ""
authors = ["Bioinformatica Genetica <bioinformatica-genetica@umcutrecht.nl>"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pandas = "2.1.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-unordered = "0.5.2"
pytest-datadir = "^1.5.0"

[tool.ruff]
line-length = 127
indent-width = 4

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
