[tool.poetry]
name = "utils"
version = "0.1.0"
description = ""
authors = ["Bioinformatica Genetica <bioinformatica-genetica@umcutrecht.nl>"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-datadir = "^1.5.0"
pytest-unordered = "^0.6.1"

[tool.ruff]
line-length = 127
indent-width = 4

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
