[tool.poetry]
name = "mosaichunter"
version = "1.0.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
iniconfig = "2.0.0"
packaging = "23.2"
pluggy = "1.5.0"
pysam = "0.22.0"

[tool.poetry.group.dev.dependencies]
pytest = "8.0.2"
pytest-datadir = "^1.5.0"

[tool.ruff]
line-length = 127
indent-width = 4

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
